[package]
name = "pars-derive"
version = "0.1.0"
authors = ["Colin Rofls <colin@cmyr.net>", "Galen O'Sullivan <galenosullivan@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "0.6"
proc-macro2 = "0.4.27"
regex = "1.1.0"

[dependencies.pars-fmt]
path = "../pars-fmt"

[dependencies.syn]
version = "*"
features = ["full", "extra-traits"]
