[package]
name = "pars"
version = "0.1.0"
authors = ["Colin Rofls <colin@cmyr.net>", "Galen O'Sullivan <galenosullivan@gmail.com>"]
edition = "2018"

[dependencies]
regex = "1.0"
once_cell = "0.1"

[dependencies.pars-derive]
path = "../pars-derive"

[dependencies.pars-fmt]
path = "../pars-fmt"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "compare"
harness = false
